--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.447.0",
     "motion": "^11.11.17",
     "next": "^15.1.0",
@@ -43,6 +44,7 @@
     "react-fancybox": "^0.2.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
+    "react-lightgallery": "^0.9.0",
     "react-phone-number-input": "^3.4.9",
     "redux": "^5.0.1",
     "sonner": "^1.7.2",
